--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>home24h</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 
@@ -65,6 +65,13 @@
 			<artifactId>json-smart</artifactId>
 			<version>2.4.7</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.3</version>
+		</dependency>
+
 
 	</dependencies>
 
