--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,8 @@ build/
 
 ### resource ###
 **/application.properties
-
+### Security secret key ###
+**/JwtUtil.java
 
 # What you need to do is the following:
 
