fix encode 2 times in create user. LOL!

--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
-			<version>2.4.7</version>
+
 		</dependency>
 	</dependencies>
 
@@ -90,4 +90,20 @@
 		</plugins>
 	</build>
 
+
+	<dependencyManagement>
+
+
+		<dependencies>
+
+
+			<dependency>
+				<groupId>net.minidev</groupId>
+				<artifactId>json-smart</artifactId>
+				<version>2.4.8</version>
+			</dependency>
+
+		</dependencies>
+
+	</dependencyManagement>
 </project>
